syntax = "proto3";

package govau.verifiablelog;

option go_package = "pb";

service QueHandler {
    rpc AddToLog(AddToLogReq) returns (AddToLogResp);
}

message Authorization {
    string api_key = 1;
}

message AddToLogReq {
    Authorization auth = 1;
    string table = 2;
    string data = 3; // json
}

message AddToLogResp {
    string signed_certificate_timestamp = 1;
}
